[tool.poetry]
name = "bot"
version = "1.0.0"
description = "A Proof-of-Authority joke cryptocurrency."
authors = ["Matteo Bertucci <matteobertucci2004@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.*"

[tool.poetry.dev-dependencies]
flake8 = "~=3.8"
flake8-annotations = "~=2.0"
flake8-bugbear = "~=20.1"
flake8-docstrings = "~=1.4"
flake8-string-format = "~=0.2"
flake8-tidy-imports = "~=4.0"
flake8-todo = "~=0.7"
flake8-isort = "~=4.0"
pep8-naming = "~=0.9"
pre-commit = "~=2.1"
taskipy = "~=1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
isort = "isort ."

[tool.isort]
multi_line_output = 6
case_sensitive = true
combine_as_imports = true
line_length = 120
atomic = true
