[tool.poetry]
name = "bot"
version = "1.0.0"
description = "A Proof-of-Authority joke cryptocurrency."
authors = ["Matteo Bertucci <matteobertucci2004@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.*"

[tool.poetry.dev-dependencies]
black = "21.11b1"
pre-commit = "~=2.1"
taskipy = "~=1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
isort = "isort ."

[tool.isort]
profile = "black"
